# flux-vocabulary

./: CHARTER.md  README.md  pyproject.toml
src/flux_vocabulary/: __init__.py  argumentation.py  compiler.py  concepts.py  contradiction_detector.py  decomposer.py  exporter.py  formats.py  ghost.py  ghost_loader.py  l0_scrubber.py  loader.py  opcodes.py  parser.py  pruning.py  registers.py  signal.py  tiling.py  vocab_signal.py  vocabulary.py
tests/: test_vocabulary.py
vocabularies/: README.md
vocabularies/core/: l0_primitives.ese
vocabularies/examples/: maritime.ese  maritime.fluxvocab  math_decomposed.fluxvocab  papers_decomposed.fluxvocab
