[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-vocabulary"
version = "0.1.0"
description = "Standalone vocabulary library for FLUX multi-agent communication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["flux", "vocabulary", "multi-agent", "bytecode"]

[tool.setuptools.packages.find]
where = ["src"]
